--- a/task6/news-section.html
+++ b/task6/news-section.html
@@ -18,8 +18,13 @@
             max-width: 960px;
             min-width: 300px;
             background-color: white;
-            height: 300px;
-            margin: 100px auto;
+            height: auto;
+            margin: 70px 100px;
+
+        }
+
+        .content {
+            margin-left: 20px;
         }
 
         .content-element {
@@ -28,7 +33,6 @@
             display: inline-block;
             width: 300px;
             min-height: 100px;
-            mi
         }
 
         .content__image {
@@ -54,16 +58,10 @@
             float: right;
         }
 
-        .wrapper {
-            position: relative;
-            background-color: white;
-        }
 
-        .content {
-            margin-top: 100px;
-            margin-left: 20px;
-        }
-        .content-element a:first-child{
+
+
+        .content-element a:first-child {
             color: #7f7f7f;
         }
 
@@ -71,72 +69,71 @@
 </head>
 <body>
 <div class="back-dashboard">
-    <div class="wrapper">
-        <div class="content">
-            <div class="news-header">
-                <div class="news-header__news"><a>Новости</a></div>
-                <div class="news_header__archive"><a href="#">Показать весь архив</a></div>
-            </div>
-            <div class="content-element">
-                <div class="content__image">
-                    <img src="resources/bear1.jpg" alt="image" title="image" height="60px" width="60px">
+    <div class="news-header">
+        <div class="news-header__news"><a>Новости</a></div>
+        <div class="news_header__archive"><a href="#">Показать весь архив</a></div>
+    </div>
+    <div class="content">
 
-                </div>
-                <div class="content__text">
-                    <a>30 ноябра 2014</a><br><br>
-                    <a href="#">Важная информация с 1 декабря 2014 </a>
-                </div>
-            </div>
-            <div class="content-element">
-                <div class="content__image">
-                    <img src="resources/BeCrueltyFree_250x250.jpg" alt="image" title="image" height="60px" width="60px">
+        <div class="content-element">
+            <div class="content__image">
+                <img src="resources/bear1.jpg" alt="image" title="image" height="60px" width="60px">
 
-                </div>
-                <div class="content__text">
-                    <a>30 ноябра 2014</a><br><br>
-                    <a href="#">Важная информация с 1 декабря 2014 </a>
-                </div>
             </div>
-            <div class="content-element">
-                <div class="content__image">
-                    <img src="resources/bear2.jpeg" alt="image" title="image" height="60px" width="60px">
-
-                </div>
-                <div class="content__text">
-                    <a>30 ноябра 2014</a><br><br>
-                    <a href="#">Важная информация с 1 декабря 2014 </a>
-                </div>
+            <div class="content__text">
+                <a>30 ноябра 2014</a><br><br>
+                <a href="#">Важная информация с 1 декабря 2014 </a>
             </div>
-            <div class="content-element">
-                <div class="content__image">
-                    <img src="resources/bear3.jpg" alt="image" title="image" height="60px" width="60px">
+        </div>
+        <div class="content-element">
+            <div class="content__image">
+                <img src="resources/BeCrueltyFree_250x250.jpg" alt="image" title="image" height="60px" width="60px">
 
-                </div>
-                <div class="content__text">
-                    <a>30 ноябра 2014</a><br><br>
-                    <a href="#">Важная информация с 1 декабря 2014 </a>
-                </div>
             </div>
-            <div class="content-element">
-                <div class="content__image">
-                    <img src="resources/bear4.jpeg" alt="image" title="image" height="60px" width="60px">
-
-                </div>
-                <div class="content__text">
-                    <a>30 ноябра 2014</a><br><br>
-                    <a href="#">Важная информация с 1 декабря 2014 Важная информация с 1 декабря 2014 </a>
-                </div>
+            <div class="content__text">
+                <a>30 ноябра 2014</a><br><br>
+                <a href="#">Важная информация с 1 декабря 2014 </a>
             </div>
-            <div class="content-element">
-                <div class="content__image">
-                    <img src="resources/bear5.jpeg" alt="image" title="image" height="60px" width="60px">
+        </div>
+        <div class="content-element">
+            <div class="content__image">
+                <img src="resources/bear2.jpeg" alt="image" title="image" height="60px" width="60px">
 
-                </div>
-                <div class="content__text">
-                    <a>30 ноябра 2014</a><br><br>
-                    <a href="#">Важная информация с 1 декабря 2014
-                       </a>
-                </div>
+            </div>
+            <div class="content__text">
+                <a>30 ноябра 2014</a><br><br>
+                <a href="#">Важная информация с 1 декабря 2014 </a>
+            </div>
+        </div>
+        <div class="content-element">
+            <div class="content__image">
+                <img src="resources/bear3.jpg" alt="image" title="image" height="60px" width="60px">
+
+            </div>
+            <div class="content__text">
+                <a>30 ноябра 2014</a><br><br>
+                <a href="#">Важная информация с 1 декабря 2014 </a>
+            </div>
+        </div>
+        <div class="content-element">
+            <div class="content__image">
+                <img src="resources/bear4.jpeg" alt="image" title="image" height="60px" width="60px">
+
+            </div>
+            <div class="content__text">
+                <a>30 ноябра 2014</a><br><br>
+                <a href="#">Важная информация с 1 декабря 2014 Важная информация с 1 декабря 2014 </a>
+            </div>
+        </div>
+        <div class="content-element">
+            <div class="content__image">
+                <img src="resources/bear5.jpeg" alt="image" title="image" height="60px" width="60px">
+
+            </div>
+            <div class="content__text">
+                <a>30 ноябра 2014</a><br><br>
+                <a href="#">Важная информация с 1 декабря 2014
+                </a>
             </div>
         </div>
     </div>
