--- a/task6/news-section.html
+++ b/task6/news-section.html
@@ -19,7 +19,7 @@
             min-width: 300px;
             background-color: white;
             height: auto;
-            margin: 70px 100px;
+            margin: 150px;
 
         }
 
@@ -57,9 +57,6 @@
         .news_header__archive {
             float: right;
         }
-
-
-
 
         .content-element a:first-child {
             color: #7f7f7f;
@@ -122,7 +119,7 @@
             </div>
             <div class="content__text">
                 <a>30 ноябра 2014</a><br><br>
-                <a href="#">Важная информация с 1 декабря 2014 Важная информация с 1 декабря 2014 </a>
+                <a href="#">Важная информация с 1 декабря 2014 </a>
             </div>
         </div>
         <div class="content-element">
