updated news section

--- a/task6/news-section.html
+++ b/task6/news-section.html
@@ -19,7 +19,7 @@
             min-width: 300px;
             background-color: white;
             height: auto;
-            margin: 150px;
+            margin: 150px auto;
 
         }
 
