--- a/task7/one-block.html..html
+++ b/task7/one-block.html..html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>One block</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles/one-block.css">
 </head>
 
 <body>
 <div class="one-block"></div>
-
 </body>
 </html>
