--- a/task7/adapt-page.html
+++ b/task7/adapt-page.html
@@ -3,32 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Adapt page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles/adapt-page.css">
 </head>
 
 <body>
+<div class="content">
 <div class="header">
     <img class="header_image" src="images/office.jpg" title="header" alt="header">
 </div>
 <div class="text-header">Заголовок первого уровня</div>
-<div class="content">
+
     <div class="news-block">
-        <div class="news">
+        <div class="news news_first">
             <div class="news_header">Новость 1</div>
             <div class="news_text">Lorem Ipsum is simply dummy text of the printing</div>
             <div class="news-footer">Читать далее</div>
         </div>
-        <div class="news">
+        <div class="news news_second">
             <div class="news_header">Новость 2</div>
             <div class="news_text">Lorem Ipsum is simply dummy text of the printing</div>
             <div class="news-footer">Читать далее</div>
         </div>
-        <div class="news">
+        <div class="news news_third">
             <div class="news_header">Новость 3</div>
             <div class="news_text">Lorem Ipsum is simply dummy text of the printing</div>
             <div class="news-footer">Читать далее</div>
         </div>
-        <div class="news">
+        <div class="news news_last">
             <div class="news_header">Новость 4</div>
             <div class="news_text">Lorem Ipsum is simply dummy text of the printing</div>
             <div class="news-footer">Читать далее</div>
