added fies to task7

--- a/task7/adapt-fotos.html
+++ b/task7/adapt-fotos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Album</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles/adapt-fotos.css">
 </head>
 <body>
@@ -35,7 +36,11 @@
     <div class="image">
         <img class="image" src="images/bear-1.jpg" alt="bear1" title="bear1">
     </div>
+    <div class="image ten-image">
+        <img class="image" src="images/bear-1.jpg" alt="bear1" title="bear1">
+    </div>
 
 
+</div>
 </body>
 </html>
