--- a/task6/first-layout- table.html
+++ b/task6/first-layout- table.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>blocks-div</title>
+    <title>blocks-table</title>
     <style>
         body {
             margin: 0;
@@ -30,13 +30,6 @@
             color: blue;
         }
 
-        div.wrapper {
-
-            background-color: yellow;
-            min-height: 100%;
-            position: relative;
-        }
-
         div.sidebar {
             width: 100%;
             height: 100%;
@@ -49,7 +42,6 @@
         div.content {
             background: url("resources/soccer40.png") repeat-y top right;
             background-size: 50px 50px;
-            background-color: white;
             padding: 5px 30px;
         }
 
@@ -72,21 +64,6 @@
             color: blue;
         }
 
-        .clearfix {
-            visibility: hidden;
-            display: block;
-            font-size: 0;
-            content: " ";
-            clear: both;
-            height: 0;
-        }
-
-        .ball {
-            float: right;
-            width: 256px;
-            display: inline-block;
-
-        }
     </style>
 </head>
 <body>
