--- a/task6/blank_slider.html
+++ b/task6/blank_slider.html
@@ -3,70 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <title>Slider</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <style>
         html, body {
-            height: 100%;
+            margin: 0;
+        }
+
+        .slider-bg {
+            width: 100%;
+            height: 400px;
+            margin-top: 200px;
             background-color: black;
         }
 
-        .slider {
-            height: 100%;
+        .image-wrapper {
+            position: relative;
             width: 80%;
-            margin: 200px auto;
+            height: 100%;
+            margin-left: auto;
+            margin-right: auto;
         }
 
-        .img-bg {
-            background: url("resources/slider/slider-img-01.jpg") no-repeat center top;
+        img {
             height: 100%;
             width: 100%;
         }
 
-        .left-button {
-            float: left;
+        .image {
+            height: 100%;
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 0;
             display: inline-block;
-            background: url("resources/slider/prev-next-sprite.png") no-repeat center left;
-            height: 50px;
-            width: 50px;
-            margin-top: 170px;
-            margin-left: 20px;
-            background-position-x: -49%;
-            border: hidden;
         }
 
-        .right-button {
-            float: right;
-            display: inline-block;
-            background: url("resources/slider/prev-next-sprite.png") no-repeat center left;
-            height: 50px;
-            width: 50px;
-            margin-right: 20px;
-            margin-top: 170px;
-            background-position-x: 146%;
-            border: hidden;
-        }
-
-        .txt-div {
-            font-family: 'Open Sans', sans-serif;
+        .left-button{
+            z-index: 1;
             position: absolute;
-            left: 13%;
+            top: 50%;
+            transform: translateY(-50%);
+            left: 1%;
             display: inline-block;
-            width: 50%;
-            z-index: 2;
-            color: white;
-            margin: 100px 120px;
-            font-size: 25px;
-            line-height: 20px;
         }
 
-        .txt-div hr {
-            font-weight: bold;
-        }
 
-        .pages {
-            display: inline-block;
+        .right-button{
+            z-index: 1;
             position: absolute;
-            bottom: -144%;
-            left: 27%;
+            top: 50%;
+            transform: translateY(-50%);
+            right: 1%;
+            display: inline-block;
+        }
+        .pages{
+            z-index: 1;
+            position: absolute;
+            bottom: 2%;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
         }
 
         li a {
@@ -82,46 +78,63 @@
             display: inline-block;
             text-decoration: none;
         }
-
         li {
             display: inline-block;
         }
-
         li a:hover {
             background-color: #FF6600;
         }
-
         div ul {
-            width: auto;
+            width: 120px;
             margin-left: auto;
             margin-right: auto;
+
+        }
+
+        .text-block{
+            font-family: 'Open Sans', sans-serif;
+            position: absolute;
+            top: 50%;  /* position the top  edge of the element at the middle of the parent */
+            left: 50%; /* position the left edge of the element at the middle of the parent */
+            transform: translate(-50%, -50%);
+            text-align: center;
+            color: white;
+        }
+        .text-block a.title{
+
+            font-size: 37px;
+        }
+        hr{
+            margin: 0;
         }
 
     </style>
 </head>
 <body>
-<div class="slider">
-    <div class="img-bg">
-        <button class="left-button"><a></a></button>
-        <div align="center" class="txt-div">
-            <hr>
-            <a>КОМФОРТНАЯ ОДЕЖДА</a>
-            <hr>
-            <br><a>для всех видов спорта</a>
-            <div class="pages">
-                <ul>
-                    <li><a href="../task4/calendar.html" target="_blank"></a></li>
-                    <li><a href="../task4/calendar.html" target="_blank"></a></li>
-                    <li><a href="../task4/calendar.html" target="_blank"></a></li>
-                    <li><a href="../task4/calendar.html" target="_blank"></a></li>
-                </ul>
-            </div>
+<div class="slider-bg">
+    <div class="image-wrapper">
+        <span class="left-button">
+            <a href="resources/bear3.jpg"><img src="resources/slider/left.png"> </a>
+        </span>
+        <div class="image"><img src="resources/slider/slider-img-01.jpg" title="image" alt="image"></div>
+        <span class="right-button">
+            <a href="resources/bear3.jpg"><img src="resources/slider/right.png"> </a>
+        </span>
+        <div class="pages">
+            <ul>
+                <li><a href="../task4/calendar.html" target="_blank"></a></li>
+                <li><a href="../task4/calendar.html" target="_blank"></a></li>
+                <li><a href="../task4/calendar.html" target="_blank"></a></li>
+                <li><a href="../task4/calendar.html" target="_blank"></a></li>
+            </ul>
         </div>
-        <button class="right-button"><a></a>
-        </button>
+        <div class="text-block">
+            <h2><hr size="2"><a class="title">Комфортная одежда</a><hr size="2"><a style="font-size: 20px">для всех видов спорта</a></h2>
+        </div>
 
     </div>
+
 </div>
-</div>
+
 </body>
 </html>
