modified last tasks

--- a/task8/form-styled.html
+++ b/task8/form-styled.html
@@ -14,35 +14,35 @@
         <div class="form-group name">
             <label for="name">Имя:</label>
             <div class="placeholder-wrap">
-                <input type="name" class="form-control" id="name">
+                <input type="name" class="form-control" id="name" placeholder="Введите Ваше имя">
                 <span class="placeholder">
-                    <i class="fa fa-user" aria-hidden="true"></i><a>  Введите Ваше имя</a></span>
+                    <i class="fa fa-user" aria-hidden="true"></i></span>
             </div>
         </div>
         <div class="form-group">
             <label for="email">Ваш email:</label>
             <div class="placeholder-wrap">
-                <input type="email" class="form-control" id="email">
+                <input type="email" class="form-control" id="email" placeholder="Введите адрес Вашей почты">
                 <span class="placeholder">
-        <i class="fa fa-envelope" aria-hidden="true"></i><a>  Введите адрес Вашей почты</a>
-    </span>
+                    <i class="fa fa-envelope" aria-hidden="true"></i></span>
+                </span>
             </div>
         </div>
         <div class="form-group">
             <label for="phone">Ваш телефон:</label>
             <div class="placeholder-wrap">
-                <input type="phone" class="form-control" id="phone">
+                <input type="phone" class="form-control" id="phone" placeholder="Введите номер телефона">
                 <span class="placeholder">
-                    <i class="fa fa-phone" aria-hidden="true"></i><a>  Введите номер телефона</a></span>
+                    <i class="fa fa-phone" aria-hidden="true"></i></span>
             </div>
         </div>
         <div class="form-group">
             <label for="message">Сообщение:</label>
             <div class="placeholder-wrap">
-                <textarea type="message" class="form-control" id="message"></textarea>
+                <textarea type="message" class="form-control" id="message" placeholder="Текст &#10;сообщения..."></textarea>
                 <span class="placeholder area">
                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                    <a>    Текст <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;сообщения...</a></span>
+                    </span>
             </div>
 
         </div>
