added changes for header

--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -3,20 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <title>CarsSelection</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/navbar-elems.css">
+    <link rel="stylesheet" type="text/css" href="css/header.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body>
 <section class="header">
-    <div class="content-wrapper">
-
+    <div class="container">
+        <div class="header-flex-wrapper">
+            <div class="phones">
+                <i class="fa fa-phone icons-header" aria-hidden="true"></i>
+                <div class="phones__text">
+                    <a><a class="phone__text__title">SALE:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>(+84) 7564 6554</a><br>
+                    <a><a class="phone__text__title">Service: </a>(+84) 888 754 754</a>
+                </div>
+            </div>
+            <div class="schedule">
+                <i class="fa fa-clock-o icons-header" aria-hidden="true"></i>
+                <div class="schedule__text">
+                    <a >Mon - Sat 8:00.AM - 21:00.PM</a>
+                    <a>Sunday CLOSED</a>
+                </div>
+            </div>
+            <div class="location">
+                <i class="fa fa-map-marker icons-header" aria-hidden="true"></i>
+                <a class="header-text">9228 Jacobson Trafficway Apt. 777 California USA</a>
+            </div>
+            <div class="brend"></div>
+        </div>
     </div>
 </section>
-<div class="navbar-menu"></div>
-<div class="main-page">
-    <div class="main-page__car">
-
+<section class="navbar-menu">
+    <div class="container">
+        <div class="navbar-menu_wrapper">
+            <div class="navbar__home"><a href="javascript:void(0)">HOME</a></div>
+            <div class="navbar__inventory">INVENTORY</div>
+            <div class="navbar__services">SERVICES</div>
+            <div class="navbar__pages">PAGES</div>
+            <div class="navbar__blog">BLOG</div>
+            <div class="navbar__shop">SHOP</div>
+            <div class="navbar__contact">CONTACT</div>
+            <div class="cnavbar__ompare">COMPARE</div>
+            <div class="navbar__cart">CART</div>
+        </div>
     </div>
-
-</div>
+</section>
+<section class="main-page">
+    <div class="container">
+        <div class="main-page__car"></div>
+    </div>
+</section>
+<section class="our-car">
+    <div class="container"></div>
+</section>
+<section class="specials">
+    <div class="container"></div>
+</section>
+<section class="select-car">
+    <div class="container"></div>
+</section>
+<section class="why-choose">
+    <div class="container"></div>
+</section>
+<section class="clients-says">
+    <div class="container"></div>
+</section>
+<section class="about">
+    <div class="container"></div>
+</section>
+<section class="footer">
+    <div class="container"></div>
+</section>
 </body>
 </html>
