--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/navbar-elems.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
 <section class="header">
@@ -23,7 +24,7 @@
             <div class="schedule">
                 <i class="fa fa-clock-o icons-header" aria-hidden="true"></i>
                 <div class="schedule__text">
-                    <a >Mon - Sat 8:00.AM - 21:00.PM</a>
+                    <a>Mon - Sat 8:00.AM - 21:00.PM</a>
                     <a>Sunday CLOSED</a>
                 </div>
             </div>
@@ -31,7 +32,10 @@
                 <i class="fa fa-map-marker icons-header" aria-hidden="true"></i>
                 <a class="header-text">9228 Jacobson Trafficway Apt. 777 California USA</a>
             </div>
-            <div class="brend"></div>
+            <div class="brend">
+                <div class="brand__image"><img src="images/firm-brand/firm-brand.png" width="62" height="61" title="Image brend" alt="image brand"> </div>
+                <div class="brand__name">AutoSelect</div>
+            </div>
         </div>
     </div>
 </section>
