--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/navbar-elems.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
+    <link rel="stylesheet" type="text/css" href="css/main-page.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
@@ -33,7 +34,8 @@
                 <a class="header-text">9228 Jacobson Trafficway Apt. 777 California USA</a>
             </div>
             <div class="brend">
-                <div class="brand__image"><img src="images/firm-brand/firm-brand.png" width="62" height="61" title="Image brend" alt="image brand"> </div>
+                <div class="brand__image"><img src="images/firm-brand/firm-brand.png" width="62" height="61"
+                                               title="Image brend" alt="image brand"></div>
                 <div class="brand__name">AutoSelect</div>
             </div>
         </div>
@@ -56,6 +58,25 @@
 </section>
 <section class="main-page">
     <div class="container">
+        <div class="main-page__text">
+            <div class="main-page__text__title"><a>INFINITI Q60 SERIES 2017</a></div>
+            <div class="main-page__text__price">
+                <p>
+                    <a class="price">$567</a>
+                    <a>/MO FOR 12 MONTH</a>
+                </p>
+            </div>
+            <div class="main-page__text__description">
+                <p>
+                    <a>WHEN AN UNKNOWN PRINTER TOOK A GALLEY OF TYPE AND</a><br>
+                    <a>SCRAMBLED IT TO MAKE A TYPE SPECIMEN BOOK. IT HAS</a><br>
+                    <a>SURVIVED NOT ONLY FIVE CENTURES</a>
+                </p>
+            </div>
+            <div class="main-page__text__learnmore">
+                <a class="text" href="#">Learn more</a>
+            </div>
+        </div>
         <div class="main-page__car"></div>
     </div>
 </section>
