finished main page

--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>CarsSelection</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+          integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/main-page.css">
@@ -93,10 +95,52 @@
                 </p>
             </div>
             <div class="main-page__text__learnmore">
-                <a class="text" href="#">Learn more</a>
+                <a class="text" href="javascript:void(0)">Learn more</a>
             </div>
         </div>
         <div class="main-page__car"></div>
+        <div class="main-page__form">
+            <div class="form-wrapper">
+                <div class="title">
+                    <a>SEARCH INVENTORY</a>
+                </div>
+                <div class="inputs">
+                    <div class="form-group">
+                        <select class="form-control" id="body">
+                            <option value="" disabled selected>Select body</option>
+                            <option>Sedan</option>
+                            <option>SUV</option>
+                            <option>Minivan</option>
+                            <option>Truck</option>
+                            <option>Coupe</option>
+                        </select>
+                        <select class="form-control" id="make">
+                            <option value="" disabled selected>Select Make</option>
+                            <option>Audi</option>
+                            <option>BMW</option>
+                            <option>INFINITI</option>
+                            <option>LEXUS</option>
+                            <option>MERCEDES BENZ</option>
+                        </select>
+                        <select class="form-control" id="year">
+                            <option value="" disabled selected>Select Year</option>
+                            <option>2012</option>
+                            <option>2013</option>
+                            <option>2014</option>
+                            <option>2015</option>
+                            <option>2016</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="search"><a class="text" href="javascript:void(0)">SEARCH</a></div>
+                <div class="have-question">
+                    <a class="question text">Have a questions? call today! <a class="phone text">(+84) 5556 5878</a></a>
+                </div>
+            </div>
+
+
+
+        </div>
     </div>
 </section>
 <section class="our-car">
