added part of our-car section

--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/main-page.css">
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="css/our-car.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
@@ -139,12 +140,87 @@
             </div>
 
 
-
         </div>
     </div>
 </section>
 <section class="our-car">
-    <div class="container"></div>
+    <div class="container">
+        <div class="cars-block">
+            <div class="car-item">
+                <div class="image car1">
+                    <div class="image_wrapper">
+                        <div class="image__price"></div>
+                        <div class="blank-triangle"></div>
+                    </div>
+                </div>
+                <div class="description"></div>
+            </div>
+            <div class="car-item">
+                <div class="image car2">
+                    <div class="image_wrapper">
+                        <div class="image__price"></div>
+                        <div class="blank-triangle"></div>
+                    </div>
+                </div>
+                <div class="description"></div>
+            </div>
+            <div class="car-item">
+                <div class="image car3">
+                    <div class="image_wrapper">
+                        <div class="image__price"></div>
+                        <div class="blank-triangle"></div>
+                    </div>
+                </div>
+                <div class="description"></div>
+            </div>
+            <div class="car-item">
+                <div class="image car4">
+                    <div class="image_wrapper">
+                        <div class="image__price"></div>
+                        <div class="blank-triangle"></div>
+                    </div>
+                </div>
+                <div class="description"></div>
+            </div>
+            <div class="car-item">
+                <div class="image car5">
+                    <div class="image_wrapper">
+                        <div class="image__price"></div>
+                        <div class="blank-triangle"></div>
+                    </div>
+                </div>
+                <div class="description"></div>
+            </div>
+            <div class="car-item">
+                <div class="image car6">
+                    <div class="image_wrapper">
+                        <div class="image__price"></div>
+                        <div class="blank-triangle"></div>
+                    </div>
+                </div>
+                <div class="description"></div>
+            </div>
+            <div class="car-item">
+                <div class="image car7">
+                    <div class="image_wrapper">
+                        <div class="image__price"></div>
+                        <div class="blank-triangle"></div>
+                    </div>
+                </div>
+                <div class="description"></div>
+            </div>
+            <div class="car-item">
+                <div class="image car8">
+                    <div class="image_wrapper">
+                        <div class="image__price"></div>
+                        <div class="blank-triangle"></div>
+                    </div>
+                </div>
+                <div class="description"></div>
+            </div>
+        </div>
+
+    </div>
 </section>
 <section class="specials">
     <div class="container"></div>
